required: replace placeholders with songs/movies
help

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>placeholder</h1>
 
 <div id="library">
+    <h2>New Releases</h2>
+    <div class="genre" id='newReleases'></div>
 
 </div>
 
